<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/layout_margin_large">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_title" />

        <TextView
            android:id="@+id/text_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/DetailHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_description" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/DetailHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_created_at" />

        <TextView
            android:id="@+id/text_created_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/DetailHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_tag_list" />

        <TextView
            android:id="@+id/text_tag_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/DetailHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_genre" />

        <TextView
            android:id="@+id/text_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/DetailHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_user" />

        <TextView
            android:id="@+id/text_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
